@@ -1,3 +1,9 @@
+Mon Dec 10 19:45:30 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add ability to restrict the reordering
+	  to just use specific fields, and to use approximations for the
+	  termfreqs to speed it up.
+
 Mon Dec 10 17:19:34 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Remove accidentally committed
